# async_api

./: .pre-commit-config.yaml  README.md  pyproject.toml
async_api/: __main__.py  app.py  main.py
async_api/external_resources/: json_placeholder_api.py
async_api/local_data/: books_data.py
async_api/middleware/: middleware_1.py  middleware_2.py  middleware_3.py
async_api/resolvers/: __init__.py  resolvers_in_book.py  resolvers_in_query.py  user_resolver.py
async_api/routes/: files.py  graphql.py  items.py  models.py  root.py  user.py
async_api/schema/: __init__.py  root.py  user.py
tests/: test_async_api.py  test_schema_is_correct.py
