[tool.black]
line-length = 100

[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["Ninad T <ninad.tungare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
