[tool.black]
line-length = 100

[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["Ninad T <ninad.tungare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
requests = "^2.25.1"
graphene = "^2.1.8"
graphene-federation = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
