[tool.black]
line-length = 100

[tool.poetry]
name = "async_api"
version = "0.2.0"
description = ""
authors = ["Ninad T <ninad.tungare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63"
uvicorn = "^0.13"
requests = "^2.25"
ariadne = "^0.12"
opentracing = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.8"
black = "^19.10b0"
pre-commit = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
